# registering-prefect-flows

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  export-requirements.sh  pyproject.toml  requirements.txt
.github/workflows/: register.yml
flows/: custom_module.py  flow.py
